feat: aumentar tamanho do logo na página de login
- Modificado Index.vue para usar h-24 (96px) ao invés de h-8/h-16
- Adicionado CSS inline no vueapp.html.erb para sobrescrever tamanho do logo
- Simplificado Dockerfile.centralcom removendo recompilação de assets (evita problemas de memória)
- Solução final: CSS inline funciona imediatamente sem necessidade de rebuild completo

Por que a solução anterior não funcionou:
- Tentativa de recompilar assets Vue.js causava 'JavaScript heap out of memory'
- Dockerfile não estava copiando arquivos Vue modificados corretamente
- CSS inline é mais simples e eficiente para este caso de uso

--- a/Dockerfile.centralcom
+++ b/Dockerfile.centralcom
@@ -31,8 +31,9 @@ COPY ./public/ms-icon-*.png /app/public/
 COPY ./config/installation_config.yml /app/config/installation_config.yml
 COPY ./app/views/layouts/vueapp.html.erb /app/app/views/layouts/vueapp.html.erb
 
-# Nota: Não é necessário recompilar assets pois estamos apenas copiando arquivos estáticos
-# Os logos e favicons são servidos diretamente do /public
+# NOTA: Não é necessário recompilar assets pois estamos usando CSS inline no layout
+# para sobrescrever o tamanho do logo. Isso evita problemas de memória durante o build.
+# Se no futuro precisar modificar os arquivos Vue, será necessário recompilar os assets.
 
 # Manter o mesmo entrypoint original
 # O entrypoint já está configurado na imagem base
