--- a/.github/workflows/publish_ee_docker.yml
+++ b/.github/workflows/publish_ee_docker.yml
@@ -20,6 +20,7 @@ env:
 
 jobs:
   build:
+    if: github.repository == 'chatwoot/chatwoot'  # Desabilitar em forks
     strategy:
       fail-fast: false
       matrix:
